--- a/routes.yaml
+++ b/routes.yaml
@@ -14,3 +14,7 @@ spec:
   port:
     targetPort: 8080
   wildcardPolicy: None
+  tls:
+    termination: edge
+    insecureEdgeTerminationPolicy: Redirect
+  wildcardPolicy: None
